--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -31,12 +31,14 @@ $zorroa-medium-pink    : #ee4688;
 $zorroa-warm-grey-60   : rgba(128, 128, 128, 0.6);
 $zorroa-slategray      : #787a77;
 $zorroa-light-green    : #b7df4d;
+$zorroa-golden-yellow  : #ead011;
 
 
 // A few extra useful colors Amber didn't specify
 
 $zorroa-darkgray   : #4a4a4a;
 $zorroa-gray       : #808080;
+$zorroa-whitegray  : #b3b3b3;
 $zorroa-lightgray  : #c3c3c3;
 $zorroa-darkwhite  : #d8d8d8;
 $zorroa-nearwhite  : #ededed;
