--- a/src/components/Metadata/Metadata.scss
+++ b/src/components/Metadata/Metadata.scss
@@ -169,3 +169,11 @@ $FolderItemHeight : 25px;
     border: 1px solid $zorroa-nearwhite;
   }
 }
+
+.Metadata-item-widget {
+  @include flexRowCenter;
+  font-size: 12px;
+  color: $zorroa-nearwhite;
+  width: 25px;
+  height: 25px;
+}
