--- a/src/components/Metadata/Metadata.scss
+++ b/src/components/Metadata/Metadata.scss
@@ -173,7 +173,7 @@ $FolderItemHeight : 25px;
 .Metadata-item-widget {
   @include flexRowCenter;
   font-size: 12px;
-  color: $zorroa-nearwhite;
+  color: $zorroa-lightgray;
   width: 25px;
   height: 25px;
 }
