Add some css class names for automated Selenium testing

--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -118,7 +118,7 @@
       display: flex;
     }
 
-    .Racetrack-footer-save-button {
+    .Racetrack-footer-save {
       background-color: $zorroa-gray;
       color: white;
 
