Restore similarity search field and values. Enable Save Search button whenever query is not empty. [Finishes #142407453][Finishes #142409767]

--- a/src/components/Assets/Editbar.scss
+++ b/src/components/Assets/Editbar.scss
@@ -146,4 +146,9 @@
       color: $zorroa-sickly-green;
     }
   }
+
+  .SortingSelector-icon {
+    &:hover { color: $zorroa-sickly-green; }
+    .SortingSelector-selected:hover & { color: $zorroa-sickly-green; }
+  }
 }
