--- a/src/components/Inspector/Multipage.scss
+++ b/src/components/Inspector/Multipage.scss
@@ -10,6 +10,7 @@
 
 .Multipage-document-switch {
   @include flexRow;
+  margin-left: 8px;
   font-size: 12px;
   font-family: "Roboto Condensed";
 }
