--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -111,8 +111,16 @@
   width: 14px;
   height: 14px;
   margin-left: 8px;
+  cursor: pointer;
+  opacity: 1;
+
   &.sync {
-    visibility: hidden;
+    opacity: 0;
+  }
+  &:hover {
+    visibility: visible;
+    opacity: 1;
+    background-color: $zorroa-nearwhite;
   }
 }
 
