Fix mag icon on Searchbar to force a new search. [Fixes #142804641]

--- a/src/components/Searchbar/Searchbar.scss
+++ b/src/components/Searchbar/Searchbar.scss
@@ -19,5 +19,6 @@
     cursor: pointer;
     color: $zorroa-sickly-green;
     font-size: 20px; // TODO: see if we can delete this when bootstrap is gone
+    &:hover { color: $zorroa-gray; }
   }
 }
