--- a/src/components/Header/CreateImport.scss
+++ b/src/components/Header/CreateImport.scss
@@ -136,7 +136,7 @@
 }
 
 .CreateImport-activity-region {
-  height: 160px;
+  height: 240px;
   margin-top: 20px;
   margin-left: 20px;
   margin-right: 20px;
@@ -149,6 +149,7 @@ $dropcolor: rgba(115, 182, 28, 0.1);
   @include flexCol;
   @include flexAlignItemsCenter;
   @include flexJustifyCenter;
+  @include fullHeight;
 
   background-color: $dropcolor;
   border-radius: 3px;
@@ -426,7 +427,8 @@ $dropcolor: rgba(115, 182, 28, 0.1);
   @include flexRow;
   background-color: $dropcolor;
   padding: 8px;
-
+  margin-bottom: 8px;
+  @include fullHeight;
 }
 
 .CreateImport-server-back {
