Update forget and change password for new Archivist endpoints.

--- a/src/components/auth/ChangePassword/ChangePassword.scss
+++ b/src/components/auth/ChangePassword/ChangePassword.scss
@@ -1,11 +1,16 @@
 @import '../../../styles/core-mixins.scss';
 
 .ChangePassword {
-  //@include flexColCenter;
   background-color: #fff;
   width: 300px;
-  //justify-content: space-between;
   border-radius: 3px;
+
+  &.fullscreen {
+    @include flexColCenter;
+    width: 100vw;
+    height: 100vh;
+    background-color: $zorroa-nearwhite;
+  }
 }
 
 .ChangePassword-header {
@@ -53,4 +58,14 @@
 .ChangePassword-body {
   padding: 40px;
   @include flexColCenter;
+
+
+  .ChangePassword.fullscreen & {
+    @include flexColCenter;
+    padding: 50px;
+    border-radius: 3px;
+    box-shadow: 0px 24px 20px -20px #BBB;
+    background-color: white;
+  }
+
 }
