--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -127,3 +127,19 @@
   @include fullWidth;
   margin-left: -8px;
 }
+
+.auth-eula {
+  @include flexRowCenter;
+  font-size: 12px;
+  color: $zorroa-lightgray;
+}
+
+.auth-eula-label {
+  @include flexRowCenter;
+  @include nowrap;
+
+  a {
+    padding-left: 4px;
+    color: $zorroa-lightgray;
+  }
+}
