Add password reset for Import step 4.

--- a/src/components/Import/Import.scss
+++ b/src/components/Import/Import.scss
@@ -75,3 +75,11 @@
   &:hover { background-color: $zorroa-gray; }
   &.disabled { background-color: $zorroa-lightgray; }
 }
+
+.Import-header-right {
+  @include flexRowCenter;
+}
+
+.Import-cancel {
+  &:hover { color: $zorroa-sickly-green; }
+}
