Refactor protocol and host to origin to enable any port. Fix up Signin UI issues. Explicitly mark onboarding during Import rather than using lastStep.

--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -61,9 +61,9 @@
   cursor: pointer;
   background-color: $zorroa-sickly-green;
   text-transform: uppercase;
-  &.disabled { background-color: $zorroa-gray; }
-  &:hover { background-color: darken($zorroa-sickly-green, 15%); }
-  &:active { background-color: darken($zorroa-water-blue, 15%); }
+  &.disabled { background-color: $zorroa-lightgray; }
+  &:hover:not(.disabled) { background-color: lighten($zorroa-sickly-green, 15%); }
+  &:active { background-color: $zorroa-water-blue; }
 }
 
 .auth-form {
