Windowed rendering for Folders
Limit FolderItem instancing to only the ones that are visible
This speeds up long folder lists considerably,
  especially when opening and closing folders.

--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -8,7 +8,7 @@ $FolderItemHeight : 25px;
   @include flexAlignItemsCenter;
   @include fullWidth;
 
-  position: relative; // fbo .FolderItem-dropzone, who's position: absolute
+  position: absolute; // fbo .FolderItem-dropzone, who's position: absolute
   cursor: pointer;
   height: $FolderItemHeight;
 
