--- a/src/components/Header/JobMenu.scss
+++ b/src/components/Header/JobMenu.scss
@@ -235,7 +235,19 @@
     color: $zorroa-sickly-green;
   }
 }
+
 .JobMenu-expired-label {
   font-size: 12px;
   color: $zorroa-faded-red;
+}
+
+.JobMenu-permissions {
+  @include flexRowCenter;
+  cursor: pointer;
+  &:hover { color: $zorroa-sickly-green; }
+}
+
+.JobMenu-permissions-text {
+  text-transform: uppercase;
+  font-size: 12px;
 }
