Add indeterminate progress and a selenium test. Fix a few bugs.

--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -63,7 +63,7 @@
   text-transform: uppercase;
   &.disabled { background-color: $zorroa-lightgray; }
   &:hover:not(.disabled) { background-color: lighten($zorroa-sickly-green, 15%); }
-  &:active { background-color: $zorroa-water-blue; }
+  &:active:not(.disabled) { background-color: $zorroa-water-blue; }
 }
 
 .auth-form {
