Refactor DnD uploads to handle folders, upload in cancellable batches, and transfer to cloudproxy.

--- a/src/components/Import/Import.scss
+++ b/src/components/Import/Import.scss
@@ -72,7 +72,7 @@
   text-decoration: none;
   @include nowrap;
 
-  &:hover { background-color: $zorroa-gray; }
+  &:hover:not(.disabled) { background-color: $zorroa-gray; }
   &.disabled { background-color: $zorroa-lightgray; }
 }
 
