Post-review fixes.

--- a/src/components/Import/Import.scss
+++ b/src/components/Import/Import.scss
@@ -70,6 +70,7 @@
   text-transform: uppercase;
   pointer-events: auto;
   text-decoration: none;
+  cursor: pointer;
   @include nowrap;
 
   &:hover:not(.disabled) { background-color: $zorroa-gray; }
